--- a/Views/Reports/EstadosResultados.cshtml
+++ b/Views/Reports/EstadosResultados.cshtml
@@ -338,9 +338,9 @@
             <tr>
                 <td colspan="7"><br /></td>
             </tr>
-            <tr>
+            @* <tr>
                 <td colspan="5">OTROS RESULTADOS INTEGRALES</td>
-            </tr>
+            </tr> *@
             <tr>
                 <td colspan="7"><br /></td>
             </tr>
@@ -360,14 +360,14 @@
                 <td style="width: 25%;"><center><div style="width: 70%; border-bottom: 1px solid black;"></div></center></td>
             </tr>
             <tr>
-                <td><center><p>Ana María Vidiella Duch</p></center></td>
-                <td><center><p>Giovanni Bladimir Diaz Reyes</p></center></td>
-                <td><center><p>ACOEX, S.A de C.V</p></center></td>
+				<td><center><p>Lic. Sandra Rubi Somoza De Sibrian</p></center></td>
+				<td><center><p>Latinco, Limitada De C.V.</p></center></td>
+                <td><center><p>Lic. Lissette Carolina Chavez De Perez</p></center></td>       
             </tr>
             <tr>
-                <td class="bold"><center><p>Representante Legal</p></center></td>
-                <td class="bold"><center><p>Contador General</p></center></td>
-                <td class="bold"><center><p>Auditor Externo</p></center></td>
+				<td class="bold"><center><p>Contador General</p></center></td>
+				<td class="bold"><center><p>Auditor Externo</p></center></td>
+                <td class="bold"><center><p>Representante Legal</p></center></td>      
             </tr>
         </table>
 
