--- a/Views/Repository/Index.cshtml
+++ b/Views/Repository/Index.cshtml
@@ -10,6 +10,60 @@
     <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css" />
     <link rel="stylesheet" href="~/css/grids.defaults.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/pages/repo.admin.css" asp-append-version="true" />
+    <style>
+        .form-select {
+            display: block;
+            width: 100%;
+            padding: .375rem 2.25rem .375rem .75rem;
+            -moz-padding-start: calc(0.75rem - 3px);
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #212529;
+            background-color: #fff;
+            background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e);
+            background-repeat: no-repeat;
+            background-position: right .75rem center;
+            background-size: 16px 12px;
+            border: 1px solid #ced4da;
+            border-radius: .25rem;
+            transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
+
+        .form-select:focus {
+            border-color: #86b7fe;
+            outline: 0;
+            box-shadow: 0 0 0 .25rem rgba(48, 29, 113, .5);
+        }
+
+        .modal-header .btn-close {
+            padding: calc(var(--bs-modal-header-padding-y)* .5) calc(var(--bs-modal-header-padding-x)* .5);
+            margin: calc(-.5* var(--bs-modal-header-padding-y)) calc(-.5* var(--bs-modal-header-padding-x)) calc(-.5* var(--bs-modal-header-padding-y)) auto;
+        }
+
+        .btn-close {
+            --bs-btn-close-color: #000;
+            --bs-btn-close-bg: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e);
+            --bs-btn-close-opacity: 0.5;
+            --bs-btn-close-hover-opacity: 0.75;
+            --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+            --bs-btn-close-focus-opacity: 1;
+            --bs-btn-close-disabled-opacity: 0.25;
+            --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
+            box-sizing: content-box;
+            width: 1em;
+            height: 1em;
+            padding: .25em .25em;
+            color: var(--bs-btn-close-color);
+            background: transparent var(--bs-btn-close-bg) center / 1em auto no-repeat;
+            border: 0;
+            border-radius: .375rem;
+            opacity: var(--bs-btn-close-opacity);
+        }
+    </style>
 }
 
 @section BreadCrumb {
@@ -31,15 +85,22 @@
                                 <i class="fa fa-file"></i>&nbsp; Partidas Liquidación
                             </button>
                         </div>
+                    
+                        <input type="hidden" id="COD_CIA" name="COD_CIA" value="@SecurityRepository.GetSessionCiaCode()" />
+                        <div class="btn-group mr-2" role="group" aria-label="First group">
+                            <button type="button" class="btn btn-warning" id="repositoryImportButton">
+                                <i class="fa fa-upload"></i>&nbsp; Importar
+                            </button>
+                        </div>
                     }
-                    <input type="hidden" id="COD_CIA" name="COD_CIA" value="@SecurityRepository.GetSessionCiaCode()" />
-                    <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <button type="button" class="btn btn-warning" id="repositoryImportButton">
-                            <i class="fa fa-upload"></i>&nbsp; Importar
-                        </button>
-                    </div>
                     @if (SecurityRepository.HasPermission (CC.THIRD_LEVEL_PERMISSION_REPOSITORIO_CAN_ADD))
                     {
+                        <div class="btn-group mr-2" role="group" aria-label="">
+                            <button class="btn btn-info" id="capitalizeByMonthButton">
+                                <i class="fa fa-calendar"></i>&nbsp; Mayorizar por Mes
+                            </button>
+                        </div>
+
                         <div class="btn-group mr-2" role="group" aria-label="">
                             <button class="btn btn-primary" id="repositoryAddButtonId">
                                 <i class="fa fa-plus"></i>&nbsp; Agregar
@@ -112,6 +173,72 @@
 <textarea id="importRepoFormHtml" style="display:none;"><partial name="UploadFile" /></textarea>
 <textarea id="repoReportHTML" style="display:none;"><canvas id="the-canvas"></canvas></textarea>
 
+<!-- Modal para selección de periodo y mes -->
+<div class="modal fade" id="capitalizeMonthModal" tabindex="-1" aria-labelledby="capitalizeMonthModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="capitalizeMonthModalLabel">Seleccionar Periodo y Mes</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="capitalizeMonthForm">
+                    <div class="mb-3">
+                        <label for="periodoInput" class="form-label">Periodo (Año)</label>
+                        <input type="number" class="form-control" id="periodoInput" placeholder="Ejemplo: 2024" >
+                    </div>
+                    <div class="mb-3">
+                        <label for="mesSelect" class="form-label">Mes</label>
+                        <select class="form-select" id="mesSelect" required>
+                            <option value="" disabled selected>Seleccione un mes</option>
+                            <option value="01">Enero</option>
+                            <option value="02">Febrero</option>
+                            <option value="03">Marzo</option>
+                            <option value="04">Abril</option>
+                            <option value="05">Mayo</option>
+                            <option value="06">Junio</option>
+                            <option value="07">Julio</option>
+                            <option value="08">Agosto</option>
+                            <option value="09">Septiembre</option>
+                            <option value="10">Octubre</option>
+                            <option value="11">Noviembre</option>
+                            <option value="12">Diciembre</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" id="confirmCapitalizeButton">Confirmar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="selectAñoModal" tabindex="-1" aria-labelledby="selectAñoModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="selectAñoModalLabel">Seleccionar Periodo</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="selectAñoForm">
+                    <div class="mb-3">
+                        <label for="añoInput" class="form-label">Periodo (Año)</label>
+                        <input type="number" class="form-control" id="añoInput" placeholder="Ejemplo: 2024">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" id="confirmSelectAñoButton">Confirmar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     <script src="~/plugins/jquery.dataTables/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="~/plugins/bootbox/bootbox.min.js"></script>
@@ -129,4 +256,5 @@
     <script src="~/js/pages/utils/accounts.utils.js" asp-append-version="true"></script>
     <script src="~/js/pages/contarepo.admin.js" asp-append-version="true"></script>
     <script src="~/js/pages/contarepo.admin.detrepo.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 }
