--- a/Views/Params/Period.cshtml
+++ b/Views/Params/Period.cshtml
@@ -83,12 +83,43 @@
     </div>
 </div>
 
+<style>
+    /* Cambiar el color de fondo de las opciones al pasar el mouse */
+   option:checked {
+        background-color: #4B339C !important;
+        color: white;
+    }
+
+    option:hover {
+        background-color: #4B339C !important;
+        color: white;
+    }
+
+   
+</style>
+
 <div class="card">
     <div class="card-body">
-        <div class="row">
-            <div class="col-md-12">
-                <table id="dmgCieCierreDt" class="display" style="width:100%">
-                    <thead>
+        <div class="row align-items-center mb-3">
+            <div class="col-md-6">
+                <h3 class="mb-0">Estado por meses</h3>
+            </div>
+            <div class="col-md-6 text-md-right">
+                <label for="YearFilter" class="mr-2 font-weight-bold">Filtrar por año:</label>
+                <select id="YearFilter" class="form-control d-inline-block " style="width: 200px;">
+                    <option value="">Seleccione un año</option>
+                    <script>
+                        const currentYear = new Date().getFullYear();
+                        for (let year = currentYear; year >= currentYear - 50; year--) {
+                            document.write(`<option value="${year}">${year}</option>`);
+                        }
+                    </script>
+                </select>
+            </div>
+        </div>
+        <div class="table-responsive">
+            <table id="dmgCieCierreDt" class="table table-striped table-bordered" style="width:100%">
+                <thead>
                     <tr>
                         <th style="width: 5%;">#</th>
                         <th>A&ntilde;o</th>
@@ -96,10 +127,9 @@
                         <th>Estado actual</th>
                         <th style="width: 20%;">Cambiar estado</th>
                     </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </div>
+                </thead>
+                <tbody></tbody>
+            </table>
         </div>
     </div>
 </div>
